--- a/src/layouts/SiteLayout.astro
+++ b/src/layouts/SiteLayout.astro
@@ -207,6 +207,9 @@ const swHref = href("/sw.js");
     <link rel="preconnect" href="https://wsrv.nl" crossorigin />
   </head>
   <body data-current-post-id={currentPostId}>
+    <a href="#main" class="acg-skip-link glass clickable">
+      {t(lang, "common.skipToContent")}
+    </a>
     <header
       class="sticky top-0 z-20 border-b border-slate-900/10 acg-header-surface"
       style="view-transition-name: acg-header;"
@@ -329,7 +332,12 @@ const swHref = href("/sw.js");
       </div>
     </header>
 
-    <main class="acg-main mx-auto max-w-7xl px-gutter pt-8 pb-28 lg:py-8" style="view-transition-name: acg-main;">
+    <main
+      id="main"
+      tabindex="-1"
+      class="acg-main mx-auto max-w-7xl px-gutter pt-8 pb-28 lg:py-8"
+      style="view-transition-name: acg-main;"
+    >
       <slot />
     </main>
 
